<resources>
    <string name="app_name" translatable="false">Link Me</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="link">Link</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="back">&lt;</string>
    <string name="male">Male</string>
    <string name="Picture_hint">change picture</string>
    <string name="sports">Sports</string>
    <string name="submit">Submit</string>
    <string name="food">Food</string>
    <string name="dating">Dating</string>
    <string name="games">Games</string>
    <string name="music">Music</string>
    <string name="anime">Anime</string>
    <string name="movie">Movie</string>
    <string name="select_your_interests">Select your interests</string>
    <string name="phone">Phone</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="other">Other</string>
    <string name="email">email</string>
    <string name="message_hint">Enter your message</string>
    <string name="send">Send</string>
    <string name="link_button">LINK ME!</string>
    <string name="user_information">User Information</string>
    <string name="link_hint">Select the interests \n you want to link to</string>
    <string name="username_placeholder">Username: %s</string>
    <string name="email_placeholder">Email: %s</string>
    <string name="gender_placeholder">Gender: %s</string>
    <string name="phone_placeholder">Phone: %s</string>
    <string name="interests_placeholder">Interests: %s</string>
    <string name="sample_receive_message">This is receive message</string>
    <string name="sample_sent_message">This is sent message</string>
</resources>