<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/profile_button"
            android:layout_width="129dp"
            android:layout_height="52dp"
            android:text="@string/Picture_hint"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="173dp"
            android:layout_marginTop="251dp"
            android:layout_marginBottom="16dp" />

    <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="225dp"
            android:layout_marginTop="243dp"
            android:minHeight="48dp" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="252dp" />

    <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="225dp"
            android:layout_marginTop="323dp"
            android:minHeight="48dp" />

    <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="105dp"
            android:layout_marginTop="6dp"
            android:minHeight="48dp" />

    <Button
            android:text="@string/submit"
            android:layout_width="403dp"
            android:layout_height="60dp"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="670dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp" />

    <CheckBox
            android:text="@string/sports"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Sports"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="246dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/food"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="291dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/dating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Dating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/games"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Games"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="378dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/music"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Music"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="419dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/anime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Anime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="506dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <CheckBox
            android:text="@string/movie"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="462dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

    <TextView
            android:text="@string/select_your_interests"
            android:layout_width="219dp"
            android:layout_height="95dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="207dp"
            android:layout_marginTop="25dp"
            android:textSize="20sp" />

    <CheckBox
            android:text="@string/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Other"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="539dp"
            android:layout_marginTop="22dp"
            android:minHeight="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
