<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical">


    <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    <Button
            android:id="@+id/linkbutton"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:text="@string/link_button"
            android:layout_marginTop="1500px"
            android:background="@android:drawable/btn_default"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="180px"
            app:menu="@menu/bottom_navigation_menu"
            android:layout_marginTop="1760px"
            android:background="@color/colorPrimary"/>



    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_information"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginTop="350px"/>




    <EditText
            android:id="@+id/searchEditText"
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150px"
            android:layout_marginTop="200px"
            android:hint="@string/link_hint"
            android:inputType="text"
            android:maxLines="1" android:minHeight="48dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    />


</RelativeLayout>
